tests/baselines/reference/moduleKeywordRepeatError.errors.txt
==== tests/cases/compiler/moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
                  ~
!!! error TS1005: ';' expected.
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.